cmake_minimum_required(VERSION 4.0)
project(Cpp_OI_Algo_Templates)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cpp_OI_Algo_Templates
        fenwick.cpp
        frfw.cpp
        matrix.cpp
        numtheo.cpp
        SegTreeLazyRangeAdd.cpp
        SegTreeLazyRangeSet.cpp
        template.cpp
        union_find.cpp)
